@@ -114,13 +114,17 @@ my $tid2 = $treectrl->AppendItem( $tid, 'Test child' );
 my ($tlid, $tlid1, $tlid2, $tlid3, $tlid4, $tlccomp, $tlccompkeep);
 
 if($testtreelist) {
-	$tlid = $treelist->GetRootItem;
-	$tlid1 = $treelist->AppendItem( $tlid, 'Test Child' );
-	$tlid2 = $treelist->AppendItem( $tlid, 'Test Child' );
-	check_init { Wx::PlTreeListItemComparator->new };
-	$tlccomp = Wx::PlTreeListItemComparator->new;
-	$tlccompkeep = Wx::PlTreeListItemComparator->new;
-	$treelist->SetItemComparator( Wx::PlTreeListItemComparator->new );
+    $tlid = $treelist->GetRootItem;
+    $tlid1 = $treelist->AppendItem( $tlid, 'Test Child' );
+    $tlid2 = $treelist->AppendItem( $tlid, 'Test Child' );
+    check_init { Wx::PlTreeListItemComparator->new };
+    $tlccomp = Wx::PlTreeListItemComparator->new;
+    $tlccompkeep = Wx::PlTreeListItemComparator->new;
+    $treelist->SetItemComparator( Wx::PlTreeListItemComparator->new );
+}
+
+if(defined(&Wx::UIActionSimulator::new)) {
+    check_init { Wx::UIActionSimulator->new };
 }
 
 check_init { Wx::TextAttr->new };
@@ -138,7 +142,7 @@ check_init { Wx::AcceleratorTable->new };
 check_init { Wx::PlValidator->new };
 
 if( Wx::wxVERSION > 2.009002 ) {
-	check_init { Wx::RichToolTip->new('Hello', 'Goodbye') } ;
+    check_init { Wx::RichToolTip->new('Hello', 'Goodbye') } ;
 }
 
 # Wx::Overlay / Wx::DCOverlay thread tests
