@@ -504,6 +504,8 @@ wxPlArtProvider *       O_WXOBJECT
 wxPlEventFilter *       O_NON_WXOBJECT_THR
 wxEventFilter *         O_NON_WXOBJECT_THR
 
+wxUIActionSimulator *   O_NON_WXOBJECT_THR
+
 OUTPUT
 O_WXOBJECT
     wxPli_object_2_sv( aTHX_ $arg, $var );
